turtleart.lessons.turtleart.Main.Star.scala.error
Source:9: error: identifier expected but '}' found.
	}
        ^