turtleart.lessons.turtleart.Main.Star.scala.code
override def run() {
	gauche(180);
	for (i<- 1 to 5) {
		droite(50);
		avance(50);
		gauche(50);
		avance(50):	
	}
}
